--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -12,8 +12,7 @@ html {
 }
 body {
   margin: 0;
-  background:url('\\Resources\\MSB08_Buildings_01.jpg');
-  background-repeat:no-repeat;
+  background:url('/Resources//STB13_WindMill_01.png') no-repeat;
   background-size:cover;
 }
 article,
@@ -1222,7 +1221,7 @@ h6 .small,
 .h6 .small {
   font-weight: normal;
   line-height: 1;
-  color: #777;
+  color: #444;
 }
 h1,
 .h1,
@@ -4077,7 +4076,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 @media (min-width: 768px) {
   .navbar {
-    border-radius: 4px;
+    border-radius: 0px;
   }
 }
 @media (min-width: 768px) {
