--- a/Content/Styles.css
+++ b/Content/Styles.css
@@ -22,3 +22,9 @@ body
     font-weight:300;
     margin:0px;
 }
+.form-inline{
+    margin-top:8px;
+    background-color:#f8f8f8;
+    border:none;
+    box-shadow:none;
+}
